Fix vertical alignment of archives on network page

--- a/app/stylesheets/builtin-pages/network.less
+++ b/app/stylesheets/builtin-pages/network.less
@@ -38,6 +38,14 @@
     border-bottom: 1px solid #ddd;
     border-right: 1px solid #ddd;
 
+    > div {
+      height: 32px;
+
+      &.buttons {
+        line-height: 32px;
+      }
+    }
+
     .favicon,
     .info {
       display: inline-block;
